# lumina

./: .gitignore  CHANGELOG.md  pubspec.yaml
.github/workflows/: build_release.yml
android/app/src/main/: AndroidManifest.xml
assets/licenses/: rust_licenses.json
ios/Runner/: Info.plist
lib/: main.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/src/: app.dart
lib/src/core/database/: isar_database_impl.dart
lib/src/core/file_handling/: unified_import_service.dart
lib/src/core/router/: app_router.dart
lib/src/core/storage/: app_storage_constants.dart
lib/src/core/theme/: app_theme.dart  color_schemes.dart
lib/src/core/widgets/: bauhaus_components.dart  book_cover.dart  segmented_option_chip.dart  theme_variant_chip.dart
lib/src/features/detail/presentation/: book_detail_screen.dart
lib/src/features/reader/application/: reader_settings_notifier.dart
lib/src/features/reader/data/: book_session.dart  (+7 more)
lib/src/web/: web_assets.dart
lib/web_src/: controller.js  pagination.css  reader_assets.dart
rust/: Cargo.toml  about.hbs  about.toml
test/: epub_import_test.mocks.dart
tools/: build_web_assets_minify.py
web_assets/controller.js/: epub_reader.ts  tsconfig.json
web_assets/controller.js/api/: lumina_api.ts
web_assets/controller.js/common/: types.ts
web_assets/controller.js/renderer/: interaction.ts  renderer.ts  theme_manager.ts
web_assets/controller.js/typ/: duokan_typ.ts  rendition_typ.ts  typ.ts  typ_common.ts
web_assets/pagination.css/: main.css
(+36 files in other folders)
